revert toList() change, it breaks containsInAnyOrder